force-app/main/default/objects/PricebookEntry/fields/Case_Allotment__c.field-meta.xml
<CustomField>
    <fullName>Case_Allotment__c</fullName>
    <formula>Product2.Case_Allotment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Allotment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>