force-app/main/default/objects/PricebookEntry/fields/Case_Overage__c.field-meta.xml
<CustomField>
    <fullName>Case_Overage__c</fullName>
    <formula>Product2.Case_Overage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Overage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>