force-app/main/default/objects/PricebookEntry/fields/Total_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Months__c</fullName>
    <formula>Product2.Total_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Months of Managed Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>