force-app/main/default/objects/PricebookEntry/fields/Total_Reports__c.field-meta.xml
<CustomField>
    <fullName>Total_Reports__c</fullName>
    <formula>Product2.Total_Reports__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Reports</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>