force-app/main/default/objects/PricebookEntry/fields/Total_Web_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Total_Web_Meetings__c</fullName>
    <formula>Product2.Total_Web_Meetings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Web Meetings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>